# agentai

./: README.md  pyproject.toml  reformat.sh
.github/: CONTRIBUTING.md
agentai/: __init__.py  annotations.py  api.py  azure_form.py  conversation.py  conversation_trim_history.py  function_parser.py  markdown_chunking.py  openai_function.py  parsers.py  sqlite_utils.py  testing.py  tool_registry.py  vectordb.py
agentai/utils/: parse_json.py
docs/: 01_AgentAI_Intro.ipynb  02_simple_example.ipynb  03_Pydantic.ipynb  04_Evaluating_OpenAI_Functions.ipynb  04_Evaluating_OpenAI_Functions.md  05_Conversation_History.ipynb  06_Querying_VectorDB_AzureDocIntel.ipynb  06_Querying_VectorDB_Unstructured.ipynb  AgentAI_Intro.ipynb  How_to_call_functions_with_chat_models.ipynb  simple_example_difference.md  test_conversation_history.py
examples/: test_func_parser.py
nbs/: How_to_call_functions_with_chat_models.ipynb
tests/: test_conversation.py  test_func_parser.py  test_parsers.py  test_vectordb.py
