[tool.poetry]
name = "agentai"
version = "0.0.3"
description = "Python library which wraps OpenAI Functions and makes them easier to use"
authors = ["NirantK <nirant.bits@gmail.com>"]
license = "Apache"
readme = "README.md"
packages = [{include = "agentai"}]

[tool.poetry.dependencies]
python = ">=3.8.16,<4.0"
docstring-parser = "^0.15"
openai = "^0.27.8"
tiktoken = "^0.4.0"
requests = "^2.31.0"
tenacity = "^8.2.2"
ruff = "^0.0.272"
isort = "^5.12.0"
pandas = "^2.0.2"
termcolor = "^2.3.0"
typing-extensions = "^4.6.3"
loguru = "^0.7.0"
pydantic = "^1.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88