[tool.poetry]
name = "agentai"
version = "0.0.5"
description = "Python library which wraps OpenAI Functions and makes them easier to use"
authors = ["NirantK <nirant.bits@gmail.com>"]
license = "Apache"
readme = "README.md"
packages = [{include = "agentai"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
docstring-parser = "^0.16"
openai = "^1.14.2"
tiktoken = "^0.6.0"
requests = "^2.31.0"
tenacity = "^8.2.3"
pandas = "^2.2.1"
termcolor = "^2.3.0"
typing-extensions = "^4.6.3"
loguru = "^0.7.2"
pydantic = "^2.6.4"
unstructured = {version="^0.9.0", extras=["pdf"]}
chromadb = "^0.4.24"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120